empezando con los permisos

--- a/app/views/equipos/_form.html.erb
+++ b/app/views/equipos/_form.html.erb
@@ -129,8 +129,8 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="myModalLabel">Reemplazar Jugador</h3>
       </div>
-      <div class="modal-body">NO IMPLEMENTADO
-        
+      <div class="modal-body">
+         <input data-autocomplete="/equipos/autocomplete_jugador_nombres" data-id-element="#id" id="jugador_id" name="jugador_id" size="30" type="text" />
       </div>
       <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
