--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 	          <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Mi GranDT<b class="caret"></b></a>
 	          <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
 	            <li><%=link_to "Equipos", equipos_path, :tabindex => "-1"%></li>
-	            <li><%=link_to "Elegir Libre", :tabindex => "-1"%></li>
+	            <li><%=link_to "Mi Equipo", @equipo, :tabindex => "-1"%></li>
 	          </ul>
 	        </li>
 
