--- a/app/views/equipos/equipo_fecha.html.erb
+++ b/app/views/equipos/equipo_fecha.html.erb
@@ -50,29 +50,24 @@
       	
       	<form>
       		<label> Arquero:  </label>
-      		<div class="droppable" id="soltable_arqueros" name="arquero" >
-
-      		</div>	      		
+      		<div class="droppable" id="soltable_arqueros" name="arquero" ></div>              
+      		
       		<label> Defensores centrales:  </label>
-      		<div class="droppable" id="soltable_defensores_centrales" name="defensores_centrales">
-
-      		</div>
+      		<div class="droppable" id="soltable_defensores_centrales" name="defensores_centrales"></div>
+      		
       		<label> Defensores laterales:  </label>
-      		<div class="droppable" id="soltable_defensores_laterales" name="defensores_laterales">
-
-      		</div>
+      		<div class="droppable" id="soltable_defensores_laterales" name="defensores_laterales"></div>
+      		
       		<label> Volantes centrales:  </label>
-      		<div class="droppable" id="soltable_volantes_centrales" name="volantes_centrales">
-
-      		</div>
+      		<div class="droppable" id="soltable_volantes_centrales" name="volantes_centrales"></div>
+      		
       		<label> Volantes laterales:  </label>
-      		<div class="droppable" id="soltable_volantes_laterales" name="volantes_laterales">
-
-      		</div>
+      		<div class="droppable" id="soltable_volantes_laterales" name="volantes_laterales"></div>
+      		
       		<label> Delanteros:  </label>
-      		<div class="droppable" id="soltable_delanteros" name="delanteros">
+      		<div class="droppable" id="soltable_delanteros" name="delanteros"></div>
 
-      		</div></br>
+      		</br>
 
       		<input type="submit" name="confirmar" value="confirmar equipo">
       	</form>
@@ -232,7 +227,6 @@
             </script>
 
       <% end %>
-
 
 
       <% @je_delanteros.each do |jd| %>
