--- a/app/views/equipos/equipo_fecha.html.erb
+++ b/app/views/equipos/equipo_fecha.html.erb
@@ -86,7 +86,7 @@
 
                $(function() { 
 
-                      $("#<%=ja.id%>").draggable();
+                      $("#<%=ja.id%>").draggable({ revert: "invalid" });
 
                       $("#soltable_arqueros").droppable({
 
@@ -116,7 +116,7 @@
 
                $(function() { 
 
-                      $("#<%=jdc.id%>").draggable();
+                      $("#<%=jdc.id%>").draggable({ revert: "invalid" });
 
                       $("#soltable_defensores_centrales").droppable({
 
@@ -146,7 +146,7 @@
 
                $(function() { 
 
-                      $("#<%=jdl.id%>").draggable();
+                      $("#<%=jdl.id%>").draggable({ revert: "invalid" });
 
                       $("#soltable_defensores_laterales").droppable({
 
@@ -176,7 +176,7 @@
 
                $(function() { 
 
-                      $("#<%=jvc.id%>").draggable();
+                      $("#<%=jvc.id%>").draggable({ revert: "invalid" });
 
                       $("#soltable_volantes_centrales").droppable({
 
@@ -206,7 +206,7 @@
 
                $(function() { 
 
-                      $("#<%=jvl.id%>").draggable();
+                      $("#<%=jvl.id%>").draggable({ revert: "invalid" });
 
                       $("#soltable_volantes_laterales").droppable({
 
@@ -235,7 +235,7 @@
 
                $(function() { 
 
-                      $("#<%=jd.id%>").draggable();
+                      $("#<%=jd.id%>").draggable({ revert: "invalid" });
 
                       $("#soltable_delanteros").droppable({
 
